--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,8 @@
         "SlashCmdList",
         "ShoppingTooltip1",
         "ShoppingTooltip2",
-        "ItemRefTooltip"
+        "ItemRefTooltip",
+        "GameTooltip",
+        "UIParent"
     ]
 }
